--- a/admin/src/web/templates/ecuestre/create.html
+++ b/admin/src/web/templates/ecuestre/create.html
@@ -77,7 +77,7 @@
 <div class="container">
     <h2>🐎 Registro de caballos</h2>
     <p>Formulario para registrar un nuevo caballo en la institución</p>
-    <form action="{{ url_for('ecuestre.create') }}" method="POST">
+    <form id="horse-form" action="{{ url_for('ecuestre.create') }}" method="POST">
         <ul id="form-tabs" class="mt-4 nav nav-tabs gap-1">
             <li class="nav-item">
                 <a role="button" class="nav-link active" aria-current="page" onclick="changePage(0)">Información
@@ -309,7 +309,6 @@
                         <div class="modal-body">
                             <select class="form-select" id="trainer-select">
                                 <option value="" selected>Seleccione un entrenador...</option>
-                                <option value="1">Entrenador ejemplo 1</option>
                                 {% if trainers %}
                                 {% for trainer in trainers %}
                                 <option value="{{ trainer.id }}">{{ trainer.name }}</option>
@@ -400,22 +399,11 @@
         document.getElementById('assigned-members-input').value = JSON.stringify(assignedMembers);
     });
 
-    // Función para validar URL
-    function isValidUrl(url) {
-        try {
-            new URL(url);
-            return true;
-        }
-        catch (_) {
-            return false;
-        }
-    }
-
     // Función para agregar un miembro a la tabla
     function assignMember(type) {
         const selectElement = document.getElementById(type + '-select');
         const selectedOption = selectElement.options[selectElement.selectedIndex];
-        const memberId = selectedOption.value;
+        const memberId = parseInt(selectedOption.value);
         const memberName = selectedOption.text;
 
         if (memberId) {
